--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: safa-amirbayat.github.io
+  github: safa-amirbayat
   instagram:
   linkedin:
   pinterest:
